--- a/MaintenanceWebService/java.resource/dbConnection.properties
+++ b/MaintenanceWebService/java.resource/dbConnection.properties
@@ -1,5 +1,5 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/socialMediaDB
+url=jdbc:mysql://localhost:3306/troserv
 username=root
 password=root
 #hibernate properties
