--- a/MaintenanceWebService/pom.xml
+++ b/MaintenanceWebService/pom.xml
@@ -178,30 +178,11 @@
 			<version>1.7.7</version>
 		</dependency>
 
-<!-- bean validation -->
-
-	<dependency>
-		<groupId>javax.validation</groupId>
-		<artifactId>validation-api</artifactId>
-		<version>1.1.0.Final</version>
-	</dependency>
-	<dependency>
-		<groupId>javax.el</groupId>
-		<artifactId>javax.el-api</artifactId>
-		<!-- use 3.0-b02 version for Java 6 -->
-		<version>3.0.0</version>
-	</dependency>
-	<dependency>
-		<groupId>org.glassfish</groupId>
-		<artifactId>javax.el</artifactId>
-		<!-- use 3.0-b01 version for Java 6 -->
-		<version>3.0.0</version>
-	</dependency>
-	
-<dependency>
-	<groupId>org.hibernate</groupId>
-	<artifactId>hibernate-validator</artifactId>
-	<version>5.0.2.Final</version>
-</dependency>
+		<dependency>
+		  <groupId>com.maintenance</groupId>
+		  <artifactId>Common</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 </project>
