--- a/Android/Maintenance/app/build.gradle
+++ b/Android/Maintenance/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.maintenance.maintenance"
-        minSdkVersion 23
+        applicationId "com.android.maintenance"
+        minSdkVersion 19
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -20,7 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0-beta1'
+    compile files('libs/httpclient-4.4.jar')
+    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
 }
