--- a/MaintenanceWebService/java.resource/dbConnection.properties
+++ b/MaintenanceWebService/java.resource/dbConnection.properties
@@ -1,9 +1,9 @@
 driverClassName=com.mysql.jdbc.Driver
-url_server=jdbc:mysql://10.250.200.36:3306/troserv
+url_=jdbc:mysql://10.250.200.36:3306/troserv
 url=jdbc:mysql://localhost:3306/troserv
 username=root
 password=root
-password_server=August2014
+password_=August2014
 #hibernate properties
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
