--- a/MaintenanceWebService/java.resource/dbConnection.properties
+++ b/MaintenanceWebService/java.resource/dbConnection.properties
@@ -4,6 +4,11 @@ url=jdbc:mysql://localhost:3306/troserv
 username=root
 password=root
 password_=August2014
+#connection pool
+jdbc.maxPoolSize=50
+jdbc.minPoolSize=10
+jdbc.maxStatements=100
+jdbc.testConnection=true
 #hibernate properties
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
