--- a/MaintenanceWebService/pom.xml
+++ b/MaintenanceWebService/pom.xml
@@ -112,6 +112,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.38</version>
 		</dependency>
+		<!-- connection pool -->
+		<dependency>
+			<groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.1.2</version>
+		</dependency>
 		<!-- JPA Provider (Hibernate) -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -143,6 +149,12 @@
 			<version>${apache_cxf}</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-rt-rs-extension-providers -->
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-rs-extension-providers</artifactId>
+			<version>${apache_cxf}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -162,7 +174,7 @@
 			<version>${servlet.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.maintenance</groupId>
 			<artifactId>Common</artifactId>
