--- a/MaintenanceWebService/.project
+++ b/MaintenanceWebService/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Rest</name>
+	<name>MaintenanceWebService</name>
 	<comment></comment>
 	<projects>
 	</projects>
