user approval api and update api

--- a/MaintenanceWebService/java.resource/dbConnection.properties
+++ b/MaintenanceWebService/java.resource/dbConnection.properties
@@ -1,9 +1,9 @@
 driverClassName=com.mysql.jdbc.Driver
-url_=jdbc:mysql://10.250.200.36:3306/troserv
+#url=jdbc:mysql://10.250.200.36:3306/troserv
 url=jdbc:mysql://localhost:3306/troserv
 username=root
 password=root
-password_=August2014
+#password=August2014
 #connection pool
 jdbc.maxPoolSize=50
 jdbc.minPoolSize=10
