--- a/MaintenanceWebService/pom.xml
+++ b/MaintenanceWebService/pom.xml
@@ -18,22 +18,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring_verson}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring_verson}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>${spring_verson}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
 			<version>${spring_verson}</version>
 		</dependency>
 		<dependency>
@@ -162,21 +147,25 @@
 			<artifactId>Common</artifactId>
 			<version>${version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.mentainance.email</groupId>
+			<artifactId>commonEmail</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<finalName>MaintenanceWebService</finalName>
 		<plugins>
-		<!--comment below plugin while building through command line -->
-<!-- 			<plugin> -->
-<!-- 				<artifactId>maven-compiler-plugin</artifactId> -->
-<!-- 				<version>3.3</version> -->
-<!-- 				<configuration> -->
-<!-- 					<source>1.7</source> -->
-<!-- 					<target>1.7</target> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+			<!--comment below plugin while building through command line -->
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
