--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<modules>
 		<module>Common</module>
-		<!--<module>CommonEmail</module>-->
+		<module>commonEmail</module>
 		<module>MaintenanceWebService</module>		
 	</modules>
 </project>
