--- a/Android/Maintenance/app/build.gradle
+++ b/Android/Maintenance/app/build.gradle
@@ -22,7 +22,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0-beta1'
     compile files('libs/httpclient-4.4.jar')
+    compile 'com.android.support:appcompat-v7:24.0.0-beta1'
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    compile 'com.android.support:design:24.0.0-beta1'
 }
