--- a/Android/Maintenance/app/src/main/AndroidManifest.xml
+++ b/Android/Maintenance/app/src/main/AndroidManifest.xml
@@ -2,22 +2,66 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.maintenance">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/mobicartlogo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ClientAssetRegister">
+        <activity android:name=".activities.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.Register"></activity>
+        <activity
+            android:name=".activities.AdminMainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:label="@string/registerlable"
+            android:parentActivityName=".activities.Login"
+            android:theme="@style/navigatetheme" />
+        <activity
+            android:name=".activities.ForgotPasswordActivity"
+            android:label="@string/forgotlable"
+            android:parentActivityName=".activities.Login"
+            android:theme="@style/navigatetheme" />
+        <activity
+            android:name=".activities.ClientRegistration"
+            android:label="@string/registerlable"
+            android:parentActivityName=".activities.AdminMainActivity"
+            android:theme="@style/navigatetheme" />
+        <activity
+            android:name=".activities.ClientAssetRegister"
+            android:label="@string/registerlable"
+            android:parentActivityName=".activities.AdminMainActivity"
+            android:theme="@style/navigatetheme" />
+        <activity
+            android:name=".activities.ClientMainActivity"
+            android:label="@string/title_activity_client_main"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activities.MachineMakeActivity"
+            android:label="Machine Make"
+            android:parentActivityName=".activities.AdminMainActivity"
+            android:theme="@style/navigatetheme" />
+        <activity android:name=".activities.MachineModelActivity"
+            android:label="Machine Model"
+            android:parentActivityName=".activities.AdminMainActivity"
+            android:theme="@style/navigatetheme"/>
+        <activity android:name=".activities.MachineTypeActivity"
+            android:label="Machine Type"
+            android:parentActivityName=".activities.AdminMainActivity"
+            android:theme="@style/navigatetheme" />
+        <activity android:name=".activities.AdminProfileActivity"
+            android:label="Profile"
+            android:parentActivityName=".activities.AdminMainActivity"
+            android:theme="@style/navigatetheme" />
+        <activity android:name=".activities.ClientApprovalActivity"/>
+
     </application>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+
 </manifest>
