sending email when user is added

--- a/commonEmail/src/main/resource/mail.properties
+++ b/commonEmail/src/main/resource/mail.properties
@@ -1,3 +1,4 @@
+## email server config 
 mail.host=smtp.gmail.com
 mail.username=emailfrommaintenance@gmail.com
 mail.password=welcome-123
@@ -6,3 +7,5 @@ mail.transport.protocol=smtp
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.debug=true
+####
+user.new.subject=Invited to login into application.
