--- a/MaintenanceWebService/src/main/resources/log4j.properties
+++ b/MaintenanceWebService/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Define the root logger with appender file
-log = D:/log4j
+log = /log4j
 log4j.rootLogger = DEBUG, FILE, stdout
 
 # Define the file appender
