--- a/Android/Maintenance/app/src/main/AndroidManifest.xml
+++ b/Android/Maintenance/app/src/main/AndroidManifest.xml
@@ -64,22 +64,27 @@
         <activity
             android:name=".activities.UserApprovalActivity"
             android:label="User Approval List"
-            android:parentActivityName=".activities.AdminMainActivity"/>
+            android:parentActivityName=".activities.AdminMainActivity" />
         <activity
             android:name=".activities.UserApprovalDetailsActivity"
             android:label="User Details"
             android:parentActivityName=".activities.UserApprovalActivity" />
         <activity
             android:name=".activities.UserMainActivity"
-            android:label= "@string/title_activity_user_main"
+            android:label="@string/title_activity_user_main"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activities.UserAlertActivity"></activity>
-        <activity android:name=".activities.MachineListActivity"></activity>
-        <activity android:name=".activities.ClientDetailsActivity"></activity>
-        <activity android:name=".activities.MachineSpareActivity"
+        <activity android:name=".activities.UserAlertActivity" />
+        <activity android:name=".activities.MachineListActivity" />
+        <activity android:name=".activities.ClientDetailsActivity" />
+        <activity
+            android:name=".activities.MachineSpareActivity"
             android:label="Machine Spare"
             android:parentActivityName=".activities.AdminMainActivity"
-            android:theme="@style/navigatetheme" ></activity>
+            android:theme="@style/navigatetheme" />
+        <activity
+            android:name=".activities.EmployeeMainActivity"
+            android:label="@string/title_activity_employee_main"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
