--- a/Android/Maintenance/app/src/main/AndroidManifest.xml
+++ b/Android/Maintenance/app/src/main/AndroidManifest.xml
@@ -82,8 +82,12 @@
             android:parentActivityName=".activities.AdminMainActivity"
             android:theme="@style/navigatetheme" />
         <activity
-            android:name=".activities.EmployeeMainActivity"
-            android:label="@string/title_activity_employee_main"
+        android:name=".activities.EmployeeMainActivity"
+        android:label="@string/title_activity_employee_main"
+        android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".activities.AdminEmployeeListActivity"
+            android:label="Employee List"
             android:theme="@style/AppTheme"></activity>
     </application>
 
