--- a/MaintenanceWebService/pom.xml
+++ b/MaintenanceWebService/pom.xml
@@ -159,7 +159,7 @@
 
 		<dependency>
 			<groupId>com.maintenance</groupId>
-			<artifactId>Common</artifactId>
+			<artifactId>common</artifactId>
 			<version>${version}</version>
 		</dependency>
 		<dependency>
@@ -173,14 +173,14 @@
 		<finalName>MaintenanceWebService</finalName>
 		<plugins>
 			<!--comment below plugin while building through command line -->
-<!-- 			<plugin> -->
-<!-- 				<artifactId>maven-compiler-plugin</artifactId> -->
-<!-- 				<version>3.3</version> -->
-<!-- 				<configuration> -->
-<!-- 					<source>1.7</source> -->
-<!-- 					<target>1.7</target> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
