--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<url>http://maven.apache.org</url>
 
 	<modules>
-		<module>Common</module>
+		<module>common</module>
 		<module>commonEmail</module>
 		<module>MaintenanceWebService</module>		
 	</modules>
