--- a/Android/Maintenance/app/build.gradle
+++ b/Android/Maintenance/app/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile files('libs/httpclient-4.4.jar')
-    compile 'com.android.support:appcompat-v7:24.0.0-beta1'
-    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
-    compile 'com.android.support:design:24.0.0-beta1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:support-v13:25.0.1'
 }
