--- a/Android/Maintenance/app/src/main/AndroidManifest.xml
+++ b/Android/Maintenance/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -38,8 +38,7 @@
             android:label="@string/registerlable"
             android:parentActivityName=".activities.AdminMainActivity"
             android:theme="@style/navigatetheme" />
-        <activity
-            android:name=".activities.MachineRegister" />
+        <activity android:name=".activities.MachineRegister" />
         <activity
             android:name=".activities.MachineMakeActivity"
             android:label="Machine Make"
@@ -55,10 +54,8 @@
             android:label="Machine Type"
             android:parentActivityName=".activities.AdminMainActivity"
             android:theme="@style/navigatetheme" />
-        <activity
-            android:name=".activities.AdminProfileActivity"/>
-        <activity
-            android:name=".activities.Profile" />
+        <activity android:name=".activities.AdminProfileActivity" />
+        <activity android:name=".activities.Profile" />
         <activity
             android:name=".activities.UserApprovalActivity"
             android:label="User Approval List"
@@ -80,16 +77,16 @@
             android:parentActivityName=".activities.AdminMainActivity"
             android:theme="@style/navigatetheme" />
         <activity
-        android:name=".activities.EmployeeMainActivity"
-        android:label="@string/title_activity_employee_main"
-        android:theme="@style/AppTheme"></activity>
+            android:name=".activities.EmployeeMainActivity"
+            android:label="@string/title_activity_employee_main"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activities.AdminEmployeeListActivity"
             android:label="Employee List"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activities.AddEmployeeActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activities.AddMachineMakeActivity"
             android:label=" Add Machine Make"
@@ -110,19 +107,27 @@
             android:label=" Add Machine Make"
             android:parentActivityName=".activities.MachineSpareActivity"
             android:theme="@style/navigatetheme" />
-        <activity android:name=".activities.AssetLogActivity"></activity>
-        <activity android:name=".activities.LogListActivity"></activity>
-        <activity android:name=".activities.AssignLogActivity"></activity>
-        <activity android:name=".activities.EmployeeWorkAssignListActivity"></activity>
-        <activity android:name=".activities.TaskAndReportTabActivity"></activity>
-        <activity android:name=".activities.CreateAssetReportActivity"></activity>
-        <activity android:name=".activities.StartStopActivity"></activity>
-        <activity android:name=".activities.ApplyCliamActivity"></activity>
-        <activity android:name=".activities.ClaimConveyanceExpenseActivity"></activity>
-        <activity android:name=".activities.BusinessDevelopmentExpenseActivity"></activity>
-        <activity android:name=".activities.MiscExpensesActivity"></activity>
-        <activity android:name=".activities.ClaimActivity"></activity>
-        <activity android:name=".activities.CliamDetailsActivity"></activity>
+        <activity android:name=".activities.AssetLogActivity" />
+        <activity android:name=".activities.LogListActivity" />
+        <activity android:name=".activities.AssignLogActivity" />
+        <activity android:name=".activities.EmployeeWorkAssignListActivity" />
+        <activity android:name=".activities.TaskAndReportTabActivity" />
+        <activity android:name=".activities.CreateAssetReportActivity" />
+        <activity android:name=".activities.StartStopActivity" />
+        <activity android:name=".activities.ApplyCliamActivity" />
+        <activity android:name=".activities.ClaimConveyanceExpenseActivity" />
+        <activity android:name=".activities.BusinessDevelopmentExpenseActivity" />
+        <activity android:name=".activities.MiscExpensesActivity" />
+        <activity android:name=".activities.ClaimActivity" />
+        <activity android:name=".activities.CliamDetailsActivity" />
+        <activity
+            android:name=".activities.AccountantMainActivity"
+            android:label="@string/title_activity_accountant_main"
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".activities.AddNewChargeActivity"></activity>
+        <activity android:name=".activities.AddNewSpareActivity"></activity>
+        <activity android:name=".activities.AddNewSerActivity"></activity>
+        <activity android:name=".activities.ServiceEngSpareChargesTabsActivity"></activity>
     </application>
 
 </manifest>
