--- a/MaintenanceWebService/src/main/resources/dbConnection.properties
+++ b/MaintenanceWebService/src/main/resources/dbConnection.properties
@@ -1,9 +1,9 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://10.250.200.36:3306/troserv
-#url=jdbc:mysql://localhost:3306/troserv1
+#url=jdbc:mysql://10.250.200.36:3306/troserv
+url=jdbc:mysql://localhost:3306/troserv1
 username=root
-#password=root
-password=August2014
+password=root
+#password=August2014
 #connection pool
 jdbc.maxPoolSize=50
 jdbc.minPoolSize=10
