--- a/MaintenanceWebService/src/main/resources/dbConnection.properties
+++ b/MaintenanceWebService/src/main/resources/dbConnection.properties
@@ -14,6 +14,12 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.format_sql=true
+url=jdbc:mysql://mysql.cab7zalo51g7.ap-south-1.rds.amazonaws.com:3306/troserv
+password=password
+username=root
+mail.password=Lancer123
+mail.username=Prasanna@rush49.com
+mail.host=167.89.125.25
 #hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 #database ip: 10.250.200.36
