godaddy db instance

--- a/MaintenanceWebService/src/main/resources/dbConnection.properties
+++ b/MaintenanceWebService/src/main/resources/dbConnection.properties
@@ -1,6 +1,6 @@
 driverClassName=com.mysql.jdbc.Driver
 #url=jdbc:mysql://10.250.200.36:3306/troserv
-#url=jdbc:mysql://localhost:3306/troserv1
+url=jdbc:mysql://localhost:3306/troserv
 #username=root
 #password=root
 #password=August2014
@@ -14,9 +14,11 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.format_sql=true
-url=jdbc:mysql://mysql.cab7zalo51g7.ap-south-1.rds.amazonaws.com:3306/troserv
-password=password
+#Aws mysql instance
+#url=jdbc:mysql://mysql.cab7zalo51g7.ap-south-1.rds.amazonaws.com:3306/troserv
+#password=password
 username=root
+password=qlogic
 mail.password=Lancer123
 mail.username=Prasanna@rush49.com
 mail.host=167.89.125.25
